css/style.css
/* ... */
@media (max-width: 1200px) {
    html {
        font-size: 55%;
    }

    .home .profession-container {
        height: 85.8rem;
    }

    .home .profession-container .profession-box {
        right: -18rem;
        height: 85.8rem;
    }

    .home .profession-container .overlay {
        right: -9rem;
    }

    .home .profession-box .profession:nth-child(1) i {
        margin-right: 7.5rem;
    }

    .home .profession-box .profession:nth-child(2) i {
        margin-right: .5rem;
    }

    .home .profession-box .profession:nth-child(3) i {
        margin-right: 3rem;
    }
}

@media (max-width: 1035px) {
    .header {
        padding: 2rem 3%;
    }

    section {
        padding: 10rem 3% 2rem;
    }

    .home .professions-container .profession-box {
        right: -22rem;
    }

    .home .profession-container .overlay {
        right: -15rem;
    }

    .services {
        padding-bottom: 7rem;
    }
}

@media (max-width: 991px) {

    .navbar a:nth-child(1),
    .navbar a:nth-child(2) {
        color: var(--main-color);
    }

    .navbar a.active::before {
        background: var(--main-color);
        opacity: .7;
    }

    .home .home-content {
        max-width: 50rem;
    }

    .home .profession-container .profession-box {
        right: -45rem;
    }

    .home .profession-container .overlay {
        right: -39.5rem;
    }

    .home-img img {
        display: none;
    }

    .services,
    .portfolio {
        padding: 7rem 5rem;
    }

    .portfolio-box {
        height: 100%;
    }

    .portfolio-box .portfolio-layer p{
        font-size:1rem;
    }

    .portfolio-box .portfolio-layer h4{
        font-size:1.5rem;
    }

    .portfolio-layer a i{
        font-size: 1rem;
    }

    .portfolio-layer a {
        display: inline-flex;
        justify-content: center;
        align-items: center;
        width: 2rem;
        height: 2rem;
        background: var(--white-color);
        border-radius: 50%;
    }

    .contact {
        min-height: auto;
        padding-bottom: 5rem;
        padding-top: 2rem;
    }

    .footer {
        padding: 1rem 3%;
    }
}



@media (max-width: 767px) {

    html .header{
        width: 100vw;
        overflow-x: hidden !important;
    }

    #menu-icon {
        display: block;
    }

    #darkMode-icon {
        position: absolute;
        right: 7rem;
        font-size: 2.6rem;
        color: var(--text-color);
        margin-bottom: .1rem;
    }

    .navbar {
        position: absolute;
        top: 100%;
        left: 0;
        width: 100%;
        padding: 1rem 3%;
        background: var(--bg-color);
        border-top: .1rem solid rgba(0, 0, 0, .2);
        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
        display: none;
    }

    .navbar.active {
        display: block;
    }

    .navbar a {
        display: block;
        font-size: 2rem;
        margin: 3rem 0;
        color: var(--text-color);
    }

    .navbar a:nth-child(1),
    .navbar a:nth-child(2) {
        color: var(--text-color-color);
    }

    .navbar a.active {
        color: var(--main-color);
    }

    .navbar a::before {
        display: none;
    }

    .home {
        padding: 0 3% 23rem;
        justify-content: center;
        text-align: center;
    }

    .home-content h3 {
        font-size: 2.6rem;
    }

    .home-content p {
        text-align: center;
    }

    .home-content h1 {
        font-size: 5rem;
    }

    .home-content .social-media a {
        margin: 2.5rem .75rem 3rem;
    }

    .home .profession-container {
        left: 0;
        width: 100%;
        height: 100%;
    }

    .home .profession-container .profession-box {
        position: fixed;
        top: 61%;
        left: 0;
        border-radius: 0;
        width: 100%;
    }

    .home .profession-box .profession {
        padding: 0 13px;
        left: auto;
        transform-origin: 0;
    }

    .home .profession-box .profession:nth-child(1) i {
        margin-right: 0;
    }

    .home .profession-box .profession:nth-child(2) i {
        margin-right: 0;
    }

    .home .profession-box .profession:nth-child(3) i {
        margin-right: 0;
    }

    .home .profession-box .profession:nth-child(1) {
        transform: rotate(-120deg) translate(-220px, -190px)
    }

    .home .profession-box .profession:nth-child(2) {
        transform: rotate(0deg) translate(0, -335px);
        ;
    }

    .home .profession-box .profession:nth-child(3) {
        transform: rotate(120deg) translate(-200px, -450px)
    }

    .home .profession-box .circle {
        position: fixed;
        width: 670px;
        height: 670px;
        z-index: -1;
    }

    .home .profession-container .overlay {
        position: fixed;
        top: 70rem;
        left: 50%;
        right: 0;
        transform: rotate(90deg) translate(-50%, 50%) scaleY(3);
        border-width: 23.9rem;
    }

    .about {
        flex-direction: column-reverse;
        text-align: center;
    }

    .about-container .about-content h2 {
        text-align: center;
    }

    .about-container .about-content p {
        text-align: center;
    }

    .about-img img {
        width: 70vw;
        margin-top: 10rem;
    }

    .services h2,
    .portfolio h2 {
        margin-bottom: 3rem;
    }

    .portfolio .portfolio-container {
        grid-template-columns: repeat(2, 1fr);
    }

    .certification-container .certification-wrapper {
        padding: 5rem 0;
    }

    .certification-content .certification-slide {
        padding: 3rem 2rem;
    }

    .certification-box .swiper-button-next,
    .certification-box .swiper-button-prev {
        display: none;
    }
}

@media (max-width: 617px) {
    .portfolio .portfolio-container {
        grid-template-columns: 1fr;
    }
}
/* ... */

